--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "angular-material": "~0.9.7",
-    "angularfire": "~1.1.1"
+    "angularfire": "~1.1.1",
+    "angular-route": "~1.4.0"
   }
 }
